# users/doc/openapi.yaml
@@ -1,4 +1,6 @@
 openapi: 3.0.0
+servers:
+  - url: http://127.0.0.1:8090
 info:
   title: Task Tracker API
   description: Task Tracker service public API.
@@ -79,6 +81,39 @@ paths:
           description: Access token is missing
         '403':
           description: Access token is invalid
+  /user/{id}/tasks:
+    get:
+      tags:
+        - Users
+      summary: List user's tasks by pages
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: page_size
+          in: query
+          schema:
+            type: integer
+        - name: page_num
+          in: query
+          schema:
+            type: integer
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: List of user's tasks
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskArray'
+                  
+        '401':
+          description: Access token is missing
+        '403':
+          description: Access token is invalid
   /task:
     post: 
       tags:
@@ -110,38 +145,11 @@ paths:
           description: Access token is missing
         '403':
           description: Access token is invalid
-    get:
-      tags:
-        - Tasks
-      summary: List your tasks by pages
-      parameters:
-        - name: page_size
-          in: query
-          schema:
-            type: integer
-        - name: page_num
-          in: query
-          schema:
-            type: integer
-      security:
-        - cookieAuth: []
-      responses:
-        '200':
-          description: List of user's tasks
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TaskArray'
-                  
-        '401':
-          description: Access token is missing
-        '403':
-          description: Access token is invalid
   /task/{id}:
     get:
       tags:
         - Tasks
-      summary: Get task by id
+      summary: Get a task by id
       parameters:
         - name: id
           in: path
@@ -166,7 +174,7 @@ paths:
     put:
       tags:
         - Tasks
-      summary: Update task 
+      summary: Update a task 
       parameters:
         - name: id
           in: path
@@ -193,6 +201,50 @@ paths:
       tags:
         - Tasks
       summary: Delete task
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: OK   
+        '401':
+          description: Access token is missing
+        '403':
+          description: Access token is invalid
+        '404':
+          description: Task does not exist
+  /task/{id}/view:     
+    post:
+      tags:
+        - Tasks
+      summary: View a task
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: OK   
+        '401':
+          description: Access token is missing
+        '403':
+          description: Access token is invalid
+        '404':
+          description: Task does not exist
+  /task/{id}/like:     
+    post:
+      tags:
+        - Tasks
+      summary: Like a task
       parameters:
         - name: id
           in: path
