# users/handlers/task.go
@@ -2,17 +2,14 @@ package handlers
 
 import (
 	"context"
-	"log"
 	"net/http"
 	"strconv"
 
 	"users/grpc"
 	"users/models"
-	pb "users/proto"
+	taskpb "users/proto/tasks"
 
 	"github.com/gin-gonic/gin"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
 )
 
 func CreateTask(c *gin.Context) {
@@ -21,7 +18,7 @@ func CreateTask(c *gin.Context) {
 	if err := c.BindJSON(&task); err != nil {
 		return
 	}
-	response, err := grpc.TaskClient.CreateTask(context.Background(), &pb.CreateTaskRequest{
+	response, err := grpc.TaskClient.CreateTask(context.Background(), &taskpb.CreateTaskRequest{
 		UserId:      username,
 		Description: task.Description,
 		Status:      task.Status,
@@ -31,7 +28,7 @@ func CreateTask(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, models.Task{
-		TaskId: response.TaskId,
+		TaskID: response.TaskId,
 	})
 }
 
@@ -42,7 +39,7 @@ func UpdateTask(c *gin.Context) {
 		return
 	}
 	taskId := c.Param("id")
-	_, err := grpc.TaskClient.UpdateTask(context.Background(), &pb.UpdateTaskRequest{
+	_, err := grpc.TaskClient.UpdateTask(context.Background(), &taskpb.UpdateTaskRequest{
 		UserId:      username,
 		TaskId:      taskId,
 		Description: task.Description,
@@ -58,7 +55,7 @@ func UpdateTask(c *gin.Context) {
 func DeleteTask(c *gin.Context) {
 	username := c.GetString("username")
 	taskId := c.Param("id")
-	_, err := grpc.TaskClient.DeleteTask(context.Background(), &pb.DeleteTaskRequest{UserId: username, TaskId: taskId})
+	_, err := grpc.TaskClient.DeleteTask(context.Background(), &taskpb.DeleteTaskRequest{UserId: username, TaskId: taskId})
 	if err != nil {
 		processRPCError(c, err)
 		return
@@ -67,14 +64,10 @@ func DeleteTask(c *gin.Context) {
 }
 
 func ListTasks(c *gin.Context) {
-	username := c.GetString("username")
-	log.Println("page_size", getPageSize(c), "id", getPageID(c))
-	resp, err := grpc.TaskClient.ListTasks(context.Background(), &pb.ListTasksRequest{
-		UserId:   username,
+	resp, err := grpc.TaskClient.ListTasks(context.Background(), &taskpb.ListTasksRequest{
 		PageId:   int32(getPageID(c)),
 		PageSize: int32(getPageSize(c)),
 	})
-
 	if err != nil {
 		processRPCError(c, err)
 		return
@@ -82,7 +75,7 @@ func ListTasks(c *gin.Context) {
 	tasks := make([]models.Task, 0)
 	for _, task := range resp.Tasks {
 		tasks = append(tasks, models.Task{
-			TaskId:      task.TaskId,
+			TaskID:      task.TaskId,
 			Description: task.Description,
 			Status:      task.Status,
 		})
@@ -91,14 +84,18 @@ func ListTasks(c *gin.Context) {
 }
 
 func GetTask(c *gin.Context) {
-	username := c.GetString("username")
 	taskId := c.Param("id")
-	resp, err := grpc.TaskClient.GetTask(context.Background(), &pb.GetTaskRequest{UserId: username, TaskId: taskId})
+	resp, err := grpc.TaskClient.GetTask(context.Background(), &taskpb.GetTaskRequest{TaskId: taskId})
 	if err != nil {
 		processRPCError(c, err)
 		return
 	}
-	c.JSON(http.StatusOK, models.Task{TaskId: resp.TaskId, Description: resp.Description, Status: resp.Status})
+	c.JSON(http.StatusOK, models.Task{
+		UserID:      resp.AuthorId,
+		TaskID:      resp.TaskId,
+		Description: resp.Description,
+		Status:      resp.Status,
+	})
 }
 
 const DEFAULT_PAGE_SIZE = 10
@@ -121,17 +118,4 @@ func getPageID(c *gin.Context) int {
 		}
 	}
 	return 0
-}
-
-func processRPCError(c *gin.Context, err error) {
-	if status.Code(err) == codes.NotFound {
-		c.JSON(http.StatusNotFound, "Task not found")
-		return
-	}
-	if status.Code(err) == codes.PermissionDenied {
-		c.JSON(http.StatusForbidden, "Not enough rights")
-		return
-	}
-	log.Println("RPC failed", err.Error())
-	c.JSON(http.StatusInternalServerError, "RPC failed")
 }
